# ai-compiler-lab

llvm-passes/: CMakeLists.txt
llvm-passes/MatMulToNeon/: CMakeLists.txt  MatMulToNeon.cpp
llvm-passes/test/: matmul_test.ll
llvm-passes/test/CPP/: MatMul2x2_Neon.cpp  mat4x4_16acc_dev.ll  output_16acc_dev.ll  output_16acc_dev.s
